fix(person) antialiase name and vitals on dark theme, change color of pid and lifespan for better visual contrast

--- a/assets/css/modules/_persons.styl
+++ b/assets/css/modules/_persons.styl
@@ -786,6 +786,16 @@
       color: #fff;
     }
 
+    &.fs-person-vitals,
+    .fs-person-vitals {
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale
+    }
+
+    .fs-person-details__container {
+      color: $color-grey-background;
+    }
+
     .fs-person-portrait__portrait {
       background-color: #57585a;
       border-color: #6c6d6f;
